Added models for price and stock.
- added alembic config
- added requirements
- added migrations for price tables
- added migrations for hyper-tables
- draft of some datasources

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,10 @@
+include alembic.ini
+include alembic/README
+include requirements.in
+recursive-include alembic *.mako
+recursive-include alembic *.py
+recursive-include alembic/versions *.py
+recursive-include finalyze *.py
 include           .pre-commit-config.yaml
 recursive-include tests *.py
 global-exclude    *~
